k8s/web3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web3-deployment
  namespace: cloud-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web3
  template:
    metadata:
      labels:
        app: web3
    spec:
      containers:
        - name: web3
          image: hashicorp/http-echo
          args:
            - "-text=DT Cloud Web3 Application"
          ports:
            - containerPort: 5678
          livenessProbe:
            httpGet:
              path: /
              port: 5678
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5678
            initialDelaySeconds: 5
            periodSeconds: 5
