k8s/web1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web1-service
  namespace: cloud-task
spec:
  type: ClusterIP
  selector:
    app: web1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
