k8s/web2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web2-service
  namespace: cloud-task
spec:
  type: ClusterIP
  selector:
    app: web2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
